ID suggestions: separate words correctly, not only by whitespace

- Use \W+ as title/journal word separator instead of only whitespace
- Enable Unicode support for QRegularExpression

BUG: 423976